log scale for convergence timing and error plots

--- a/convergence_timing/plots.ipynb
+++ b/convergence_timing/plots.ipynb
@@ -141,11 +141,12 @@
     "    ax1.grid(True, which=\"both\", ls=\"--\")\n",
     "\n",
     "    ax2 = ax1.twinx()\n",
+    "    ax2.set_yscale(\"log\")\n",
     "    for order in range(len(df[\"order\"].unique())+1):\n",
     "        df_plot = df[df[\"order\"] == order]\n",
     "        if df_plot.empty:\n",
     "            continue\n",
-    "        ax2.bar(df_plot[\"ndof\"]*(1+0.05*order), df_plot[\"err\"],\n",
+    "        ax2.bar(df_plot[\"ndof\"], df_plot[\"err\"],\n",
     "                width=df_plot[\"ndof\"]*0.05, alpha=0.3,\n",
     "                color=colors[order], label=f'Error (order {order})')\n",
     "\n",
@@ -266,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
