fix: correct data for plots

--- a/convergence_timing/plots.ipynb
+++ b/convergence_timing/plots.ipynb
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_timing_and_error(df_dirichlet, name=\"Dirichlet to Neumann\", save_fig=True)"
+    "plot_timing_and_error(df_neu, name=\"Dirichlet to Neumann\", save_fig=True)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_timing_and_error(df_neu, name=\"Neumann to Dirichlet\", save_fig=True)"
+    "plot_timing_and_error(df_dirichlet, name=\"Neumann to Dirichlet\", save_fig=True)"
    ]
   },
   {
