update notebooks for repro

--- a/docu/demos/Helmholtz_Brakhage_Werner.ipynb
+++ b/docu/demos/Helmholtz_Brakhage_Werner.ipynb
@@ -142,7 +142,8 @@
     "gfu = GridFunction(fes_sphere)\n",
     "pre = BilinearForm(u*v*ds, diagonal=True).Assemble().mat.Inverse()\n",
     "with TaskManager():\n",
-    "    gfu.vec[:] = solvers.GMRes(A=lhs, b=rhs.vec, pre=pre, maxsteps=40, tol=1e-8)"
+    "    gfu.vec[:] = solvers.GMRes(A=lhs, b=rhs.vec, pre=pre, maxsteps=40, tol=1e-8, \n",
+    "                               printrates=False)"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "id": "11",
    "metadata": {},
    "source": [
-    "## Postprocessing on screen"
+    "**Evaluation of the Solution** "
    ]
   },
   {
