--- a/docu/demos/Laplace_Mixed.ipynb
+++ b/docu/demos/Laplace_Mixed.ipynb
@@ -40,9 +40,9 @@
    "source": [
     "We consider an interior boundary value problem with mixed boundary conditions like this:\n",
     "\n",
-    "|  |  |  |\n",
-    "| -|--|- |\n",
-    "| $ \\begin{array}{r rcl r} & \\Delta u &=& 0  &\\mathrm{in}\\; \\Omega\\,,\\\\ \\textnormal{Dirichlet condition} & \\gamma_0 u &=& m & \\mathrm{on}\\; \\Gamma_0\\,,\\\\ \\textnormal{Neumann condition} & \\gamma_1 u &=&  j & \\mathrm{on}\\; \\Gamma_1\\,. \\end{array} $   | $\\quad\\quad\\quad$  | ![](resources/BEM_Mixed.png)  |\n"
+    "|  |  | \n",
+    "|:-:|:-:|\n",
+    "| $ \\left\\{ \\begin{array}{r rcl r} & \\Delta u &=& 0  &\\mathrm{in}\\; \\Omega\\,,\\\\ \\textnormal{Dirichlet condition} & \\gamma_0 u &=& m & \\mathrm{on}\\; \\Gamma_0\\,,\\\\ \\textnormal{Neumann condition} & \\gamma_1 u &=&  j & \\mathrm{on}\\; \\Gamma_1\\,. \\end{array} \\right. \\quad\\quad\\quad$  | ![](resources/BEM_Mixed.png)  |\n"
    ]
   },
   {
@@ -60,8 +60,6 @@
    "id": "9b2969aa-4f83-4050-b9e8-fc1e485dc77f",
    "metadata": {},
    "source": [
-    "**NGSolve solution**\n",
-    "\n",
     "Define the geometry and the mesh:"
    ]
   },
@@ -222,7 +220,7 @@
    "source": [
     "with TaskManager():\n",
     "    pre = BilinearForm( (uH1 * vH1 + uL2 * vL2) * ds(bonus_intorder=3) ).Assemble().mat.Inverse(freedofs=fes.FreeDofs())\n",
-    "    sol = GMRes(A=lhs, b=rhs, pre=pre, tol=1e-8, maxsteps=500)"
+    "    sol = GMRes(A=lhs, b=rhs, pre=pre, tol=1e-8, maxsteps=500, printrates=False)"
    ]
   },
   {
@@ -272,7 +270,7 @@
    "id": "f4278e12-08dd-4361-992e-a3f57edeed4d",
    "metadata": {},
    "source": [
-    "Postprocessing on screen"
+    "**Evaluation of the Solution**"
    ]
   },
   {
