--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,26 +1,29 @@
 @article{gumerov2001fast,
-  title={Fast, exact, and stable computation of multipole translation and rotation coefficients for the 3-D Helmholtz equation},
-  author={Gumerov, Nail A and Duraiswami, Ramani},
-  year={2001},
-  url={https://drum.lib.umd.edu/items/f0c54406-2abe-4416-b35f-1d4f669b8c50}
+      title     = {Fast, exact, and stable computation of multipole translation and rotation coefficients for the 3-D Helmholtz equation},
+      author    = {Gumerov, Nail A and Duraiswami, Ramani},
+      publisher = {University of Maryland},
+      series    = {Technical Reports of the Computer Science Department},
+      year      = {2001},
+      url       = {https://drum.lib.umd.edu/items/f0c54406-2abe-4416-b35f-1d4f669b8c50}
 }
 
 @book{Weggler:2011,
       author    = {Weggler, Lucy},
       title     = {High Order Boundary Element Methods},
       publisher = {Saarland University},
+      type      = {Dissertation},
       year      = {2011},
       url       = {https://publikationen.sulb.uni-saarland.de/bitstream/20.500.11880/26312/1/thesis_weggler_final_6.1.12.pdf}
 }
 
 @book{steinbach2007numerische,
-  title={Numerische N{\"a}herungsverfahren f{\"u}r elliptische Randwertprobleme: Finite Elemente und Randelemente},
-  author={Steinbach, Olaf},
-  year={2007},
-  publisher={Springer},
-  series={Springer-Lehrbuch},
-  isbn={978-3-540-46505-7},
-  doi={10.1007/978-3-540-46506-4}
+      title     = {Numerische N{\"a}herungsverfahren f{\"u}r elliptische Randwertprobleme: Finite Elemente und Randelemente},
+      series    = {Advences in Numerical Mathematics},
+      author    = {Steinbach, Olaf},
+      publisher = {Springer},
+      year      = {2003},
+      isbn      = {978-3-540-46505-7},
+      doi       = {10.1007/978-3-322-80054-1}
 }
 
 @book{Gumerov:2005,
@@ -28,19 +31,19 @@
       title     = {Fast Multipole Methods for the Helmholtz Equation in Three Dimensions},
       publisher = {Elsevier},
       year      = {2005},
+      isbn      = {978-0-08-044371-3},
+      doi       = {10.1016/B978-0-08-044371-3.X5000-5}
 }
 
 @book{SauterSchwab:2011,
-  author    = {Sauter, Stefan A. and Schwab, Christoph},
+  author    = {Sauter, Stefan and Schwab, Christoph},
   title     = {Boundary Element Methods},
-  series    = {Springer Series in Computational Mathematics},
+  series    = {Springer Series in Computational Mechanics},
   volume    = {39},
-  publisher = {Springer-Verlag},
+  publisher = {Springer},
   year      = {2011},
-  address   = {Berlin, Heidelberg},
-  isbn      = {978-3-642-20694-4},
-  doi       = {10.1007/978-3-642-20671-5},
-  url       = {https://doi.org/10.1007/978-3-642-20671-5}
+  isbn      = {978-3-540-68092-5},
+  doi       = {10.1007/978-3-540-68093-2},
 }
 
 @article{GreengardRokhlin:1987,
@@ -53,20 +56,22 @@
   year      = {1987},
   publisher = {Elsevier},
   doi       = {10.1016/0021-9991(87)90140-9},
-  url       = {https://doi.org/10.1016/0021-9991(87)90140-9}
+  issn      = {0021-9991},
+  url       = {https://www.sciencedirect.com/science/article/pii/0021999187901409},
 }
 
 @Inbook{harmonicanalysis,
-  author="Gumerov, Nail A.
-  and Duraiswami, Ramani",
-  title="Recursive Computation of Spherical Harmonic Rotation Coefficients of Large Degree",
-  bookTitle="Excursions in Harmonic Analysis, Volume 3: The February Fourier Talks at the Norbert Wiener Center",
-  year="2015",
-  publisher="Springer International Publishing",
-  address="Cham",
-  isbn="978-3-319-13230-3",
-  doi="10.1007/978-3-319-13230-3_5",
-  url="https://doi.org/10.1007/978-3-319-13230-3_5"
+    author  = {Gumerov, Nail A. and Duraiswami, Ramani},
+    editor  = {Balan, Radu and Begu{\'e}, Matthew J.  and Benedetto, John J.  and Czaja, Wojciech and Okoudjou, Kasso A.},
+    title   = {Recursive Computation of Spherical Harmonic Rotation Coefficients of Large Degree},
+    bookTitle= {Excursions in Harmonic Analysis, Volume 3: The February Fourier Talks at the Norbert Wiener Center},
+    year    = {2015},
+    publisher = {Springer International Publishing},
+    address = {Cham},
+    pages   = {105--141},
+    isbn      = {978-3-319-13230-3},
+    doi       = {10.1007/978-3-319-13230-3_5},
+    url       = {https://doi.org/10.1007/978-3-319-13230-3_5},
 }
 
 @misc{gumerov2021analyticalcomputation,
@@ -90,7 +95,7 @@
 }
 
 @mastersthesis{Dorigo2025,
-  author       = {Rafael Dorigo},
+  author       = {Dorigo, Rafael},
   title        = {High Order Boundary Element Methods Accelerated by the Fast Multipole Method in NGSolve},
   school       = {Technische Universität Wien},
   year         = {2025},
@@ -100,15 +105,23 @@
 }
 
 @article{Weggler:2012,
-  title={Stabilized Boundary Element Methods for Low-Frequency Electromagnetic Scattering},
   author={Weggler, Lucy},
+  title={Stabilized Boundary Element Methods for Low-Frequency Electromagnetic Scattering},
   journal={Mathematical Methods in the Applied Sciences},
   volume={35},
   number={5},
   pages={574--597},
   year={2012},
-  month={March},
   publisher={Wiley},
   doi={10.1002/mma.1597},
   url={https://onlinelibrary.wiley.com/doi/10.1002/mma.1597}
+}
+
+@misc{ngsbem_docu,
+  title = {NGSBEM Docu},
+  author = {Weggler, Lucy},
+  year={2025},
+  publisher = {GitHub Pages},
+  type = {Online Documentation},
+  url = {https://weggler.github.io/docu-ngsbem/intro.html},
 }
