update Maxwell notebooks with rep formula

--- a/demos/Maxwell_DtN_direct.ipynb
+++ b/demos/Maxwell_DtN_direct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4220f8af-1580-467a-801e-6ef49d43c70c",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b3bee3e9-b23a-43dd-b5d9-8f9265af827a",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
     "E_inc = CF((1,0,0))*exp( -1j * kappa * z )\n",
     "\n",
     "n = specialcf.normal(3)\n",
-    "m = GridFunction(fesHCurl) \n",
+    "m = GridFunction(fesHCurl)  \n",
     "m.Set( -E_inc, definedon=mesh.Boundaries(\".*\"), dual=True) # Hcurl"
    ]
   },
@@ -202,6 +202,55 @@
    "outputs": [],
    "source": [
     "Draw(j[1].real, mesh, draw_vol=False, order=3);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ad6a86-ec9a-470a-935f-de2cbb82d4e1",
+   "metadata": {},
+   "source": [
+    "**Evaluation of the Scattered Field**\n",
+    "\n",
+    "Define the geometry of the receiver, generate a mesh and evaluate the scattered field $\\boldsymbol E$:\n",
+    "\n",
+    "$$ \\begin{array}{rcl}(1) \\quad \\quad \\quad \\boldsymbol E(x) &=& \\underbrace{ \\kappa \\, \\displaystyle \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol j(y)\\, \\mathrm{d}s_y  +  \\frac{1}{\\kappa} \\, \\nabla \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol j(y)\\, \\mathrm{d}s_y }_{\\displaystyle \\mathrm{SL}(\\boldsymbol j)} \\\\[2ex] && \\quad + \\;\\underbrace{ \\nabla \\times  \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol n \\times \\boldsymbol{m}(y)\\, \\mathrm{d}s_y }_{\\displaystyle \\mathrm{DL}(\\boldsymbol n \\times\\boldsymbol m)}\\,. \\end{array}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41048d2e-d45f-423b-91b1-df90e89918b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the receiver, i.e., plane screen (note that the potential evaluation does not yet evaluate the full SL)\n",
+    "screen = WorkPlane(Axes( (0,0,-3.5), Z, X)).RectangleC(20,20).Face()\n",
+    "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1)).Curve(1)\n",
+    "fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
+    "E_screen = GridFunction(fes_screen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0cc4083-1840-4da3-bd89-cf0e84d594a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate represenation formula\n",
+    "repformula = kappa * HelmholtzSL(uHDiv.Trace()*ds, kappa)(j) + 1/ kappa * grad(HelmholtzSL(div(uHDiv.Trace())*ds, kappa)(j)) \\\n",
+    "                + curl(HelmholtzSL(uHCurl.Operator(\"rotated_trace\") * ds, kappa))(m)\n",
+    "E_screen.Set (repformula, definedon=mesh_screen.Boundaries(\".*\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afc8b97d-f5b6-40ca-ac01-a7830876fbe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Draw( E_screen, mesh_screen, draw_vol=False, order=3, min=0, max=0.1, animate_complex=True);"
    ]
   },
   {
