--- a/demos/Maxwell_DtN_indirect.ipynb
+++ b/demos/Maxwell_DtN_indirect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4220f8af-1580-467a-801e-6ef49d43c70c",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b3bee3e9-b23a-43dd-b5d9-8f9265af827a",
    "metadata": {},
    "outputs": [],
@@ -74,19 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5a6ee11f-4bc6-4cc8-9408-c4d6d9c4727d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ndof HCurl =  1568\n",
-      "ndof HDiv =  1568\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fesHCurl = HCurl(mesh, order=3, complex=True)\n",
     "fesHDiv = HDivSurface(mesh, order=3, complex=True)\n",
@@ -107,32 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2ea25412-738b-469b-a30c-990d32089e9c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kappa =  5.0034083602476045\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4817efa56ba43dda6d673e1b2da3d07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.25…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eps0 = 8.854e-12 \n",
     "mu0 = 4*pi*1e-7\n",
@@ -182,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5da7bba5-fe7a-4b35-814e-50f380c0c338",
    "metadata": {},
    "outputs": [],
@@ -193,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "86468414-ef61-462e-a97d-6dbd0e1f5098",
    "metadata": {},
    "outputs": [],
@@ -212,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0547ded5-a9f5-4515-9ad5-3b5dc006549d",
    "metadata": {},
    "outputs": [],
@@ -253,9 +222,31 @@
    "source": [
     "**Evaluation of the Solution**\n",
     "\n",
-    "Define the geometry of the receiver, generate a mesh and evaluate the scattered field $\\boldsymbol E$.\n",
+    "Define the geometry of the receiver, generate a mesh and evaluate the scattered field $\\boldsymbol E$ as given by the representation formula, i.e.,\n",
     "\n",
-    "- consider as receiver a sphere around the PEC body:   "
+    "$$ \\textnormal{ for } \\quad x \\quad \\textnormal{ on receiver, it holds } \\quad \\boldsymbol E(x) = \\underbrace{ \\kappa \\, \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol j(y)\\, \\mathrm{d}s_y  +  \\frac{1}{\\kappa} \\, \\nabla \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{SL}(\\boldsymbol j)}} \\,.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab1cf6f5-f389-4a91-86ea-90ac02b27da4",
+   "metadata": {},
+   "source": [
+    "- consider as receiver a sphere around the PEC body: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94a9abda-1e3f-42a3-a22a-df341837d86e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define receiver, i.e., a sphere around pec\n",
+    "screen = Sphere( (0,0,0), 20)\n",
+    "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1, perfstepsend=meshing.MeshingStep.MESHSURFACE)).Curve(4)\n",
+    "fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
+    "E_screen = GridFunction(fes_screen)"
    ]
   },
   {
@@ -265,23 +256,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sphere (note that the potential evaluation does not yet evaluate the full SL)\n",
-    "order = 3\n",
-    "screen = Sphere( (0,0,0), 20)\n",
-    "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1, perfstepsend=meshing.MeshingStep.MESHSURFACE)).Curve(4)\n",
-    "fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
-    "E_screen = GridFunction(fes_screen)\n",
-    "\n",
-    "V = MaxwellSingleLayerPotentialOperator(fesHDiv, kappa, intorder=8 + 2 * order)\n",
-    "E_screen.Set (V.GetPotential(j)[0:3], definedon=mesh_screen.Boundaries(\".*\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b496b5d-ac77-4027-9373-18e67af9d1e2",
-   "metadata": {},
-   "source": [
-    "We obtain the typical far field pattern of the scattered field:"
+    "# evaluate represenation formula\n",
+    "repformula = kappa * HelmholtzSL(uHDiv.Trace()*ds, kappa)(j) + 1/ kappa * grad(HelmholtzSL(div(uHDiv.Trace())*ds, kappa)(j))\n",
+    "E_screen.Set (repformula, definedon=mesh_screen.Boundaries(\".*\"))\n",
+    "Draw( E_screen, mesh_screen, draw_vol=False, order=3, min=0, max=0.1, animate_complex=True);"
    ]
   },
   {
@@ -291,6 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# far field pattern\n",
     "Draw(kappa*300*Norm(E_screen)*n, mesh_screen, deformation=True);"
    ]
   },
@@ -309,12 +288,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plane screen (note that the potential evaluation does not yet evaluate the full SL)\n",
+    "# define the receiver, i.e., plane screen (note that the potential evaluation does not yet evaluate the full SL)\n",
     "screen = WorkPlane(Axes( (0,0,-3.5), Z, X)).RectangleC(20,20).Face()\n",
     "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1)).Curve(1)\n",
     "fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
-    "E_screen = GridFunction(fes_screen)\n",
-    "E_screen.Set (V.GetPotential(j)[0:3], definedon=mesh_screen.Boundaries(\".*\"))"
+    "E_screen = GridFunction(fes_screen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88f3283f-ce79-4119-b51a-355e74b27ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate represenation formula\n",
+    "repformula = kappa * HelmholtzSL(uHDiv.Trace()*ds, kappa)(j) + 1/ kappa * grad(HelmholtzSL(div(uHDiv.Trace())*ds, kappa)(j))\n",
+    "E_screen.Set (repformula, definedon=mesh_screen.Boundaries(\".*\"))"
    ]
   },
   {
