--- a/demos/Maxwell_DtN_stabilized.ipynb
+++ b/demos/Maxwell_DtN_stabilized.ipynb
@@ -45,59 +45,41 @@
     "$$\n",
     "\\left\\{\n",
     "\\begin{aligned}\n",
-    "\\langle \\gamma_{R} S_{\\kappa}(j^{t}), \\phi \\rangle_{-\\frac{1}{2}}\n",
+    "\\langle \\gamma_{R} S_{\\kappa}(j), \\phi \\rangle_{\\Gamma}\n",
     "\\;+\\;\n",
-    "\\langle \\operatorname{div}_{\\Gamma}\\phi, \\gamma_{0} S_{\\kappa}(\\rho^{t}_{\\Gamma}) \\rangle_{\\frac{1}{2}}\n",
+    "\\langle \\operatorname{div}_{\\Gamma}\\phi, \\gamma_{0} S_{\\kappa}(\\rho_{\\Gamma}) \\rangle_{\\Gamma}\n",
     "&=\n",
-    "\\langle m \\times n, \\phi \\rangle_{-\\frac{1}{2}},\n",
+    "\\langle m \\times n, \\phi \\rangle_{-\\Gamma}\\,,\n",
     "\\\\[4pt]\n",
-    "\\langle \\nu, \\gamma_{0} S_{\\kappa}(\\operatorname{div}_{\\Gamma} j^{t}) \\rangle_{\\frac{1}{2}}\n",
+    "\\langle \\nu, \\gamma_{0} S_{\\kappa}(\\operatorname{div}_{\\Gamma} j) \\rangle_{\\Gamma}\n",
     "\\;+\\;\n",
-    "\\kappa^{2}\\langle \\nu, \\gamma_{0} S_{\\kappa}(\\rho^{t}_{\\Gamma}) \\rangle_{\\frac{1}{2}}\n",
+    "\\kappa^{2}\\langle \\nu, \\gamma_{0} S_{\\kappa}(\\rho_{\\Gamma}) \\rangle_{\\Gamma}\n",
     "&=\n",
-    "0,\n",
+    "0\\,.\n",
     "\\end{aligned}\n",
     "\\right.\n",
     "$$\n",
     "\n",
     "We solve the discretized system\n",
-    "$$\n",
-    "\\begin{pmatrix}\n",
+    "\n",
+    "\n",
+    "$$ \\left( \\begin{array}{cc} \n",
     "A_{\\kappa} & Q_{\\kappa} \\\\\n",
     "Q_{\\kappa}^{\\top} & \\kappa^{2} V_{\\kappa}\n",
-    "\\end{pmatrix}\n",
-    "=\n",
-    "\\begin{pmatrix}\n",
+    "\\end{array}\\right) \\,\\left( \\begin{array}{c} \n",
     "\\alpha_{1} \\\\\n",
     "\\alpha_{2}\n",
-    "\\end{pmatrix}\n",
-    "=\n",
-    "\\begin{pmatrix}\n",
-    "M\\beta \\\\\n",
-    "0\n",
-    "\\end{pmatrix},\n",
+    "\\end{array}\\right) =\n",
+    "\\left( \\begin{array}{c} M\\, \\beta \\\\ 0 \\end{array} \\right)\\,,\n",
     "$$\n",
-    "where\n",
-    "\\begin{align*}\n",
-    "(A_{\\kappa})_{lk}\n",
-    "&=\n",
-    "\\bigl(\\gamma_{R} S_{\\kappa}(\\phi_{k}),\\, \\phi_{l}\\bigr)_{\\Gamma}\n",
-    "=\n",
-    "\\int_{\\Gamma}\\int_{\\Gamma}\n",
-    "\\phi_{l}(x)\\cdot\\bigl(G_{\\kappa}(x-y)\\,\\phi_{k}(y)\\bigr)\\, d\\sigma_{y}\\, d\\sigma_{x},\\\\\n",
-    "(V_{\\kappa})_{lk}\n",
-    "&=\n",
-    "\\bigl(\\nu_{l},\\, \\gamma_{0} S_{\\kappa}(\\nu_{k})\\bigr)_{\\Gamma}\n",
-    "=\n",
-    "\\int_{\\Gamma}\\int_{\\Gamma}\n",
-    "\\nu_{l}(x)\\, G_{\\kappa}(x-y)\\, \\nu_{k}(y)\\, d\\sigma_{y}\\, d\\sigma_{x},\\\\\n",
-    "(Q_{\\kappa})_{lk}\n",
-    "&=\n",
-    "\\bigl(\\operatorname{div}_{\\Gamma}\\phi_{l},\\, \\gamma_{0} S_{\\kappa}(\\nu_{k})\\bigr)_{\\Gamma}\n",
-    "=\n",
-    "\\int_{\\Gamma}\\int_{\\Gamma}\n",
-    "\\operatorname{div}_{\\Gamma}\\phi_{l}(x)\\, G_{\\kappa}(x-y)\\, \\nu_{k}(y)\\, d\\sigma_{y}\\, d\\sigma_{x}.\n",
-    "\\end{align*}"
+    "\n",
+    "\n",
+    "where $\\phi_k, \\phi_l \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma, \\Gamma)$ and $\\nu_l, \\nu_k\\in H^{-\\frac12}(\\Gamma)$\n",
+    "\n",
+    "$$ \\begin{array}{rcl}\n",
+    "(A_{\\kappa})_{lk} &=& \\langle \\gamma_{R} S_{\\kappa}(\\phi_{k}),\\, \\phi_{l}\\rangle_{\\Gamma} = \\displaystyle \\int\\limits_{\\Gamma}\\displaystyle \\int\\limits_{\\Gamma} \\phi_{l}(x)\\cdot\\bigl(G_{\\kappa}(x-y)\\,\\phi_{k}(y)\\bigr)\\, d\\sigma_{y}\\, d\\sigma_{x},\\\\ && \\\\ \n",
+    "(V_{\\kappa})_{lk} &=& \\langle \\nu_{l},\\, \\gamma_{0} S_{\\kappa}(\\nu_{k}) \\rangle_{\\Gamma} = \\displaystyle \\int\\limits_{\\Gamma} \\displaystyle \\int\\limits_{\\Gamma} \\nu_{l}(x)\\, G_{\\kappa}(x-y)\\, \\nu_{k}(y)\\, d\\sigma_{y}\\, d\\sigma_{x},\\\\ && \\\\\n",
+    "(Q_{\\kappa})_{lk} &=& \\langle \\operatorname{div}_{\\Gamma}\\phi_{l},\\, \\gamma_{0} S_{\\kappa} (\\nu_{k})\\rangle_{\\Gamma} = \\displaystyle \\int\\limits_{\\Gamma} \\displaystyle \\int\\limits_{\\Gamma} \\operatorname{div}_{\\Gamma}\\phi_{l}(x)\\, G_{\\kappa}(x-y)\\, \\nu_{k}(y)\\, d\\sigma_{y}\\, d\\sigma_{x}\\,. \\end{array} $$ "
    ]
   },
   {
