--- a/demos/Helmholtz_Brakhage_Werner.ipynb
+++ b/demos/Helmholtz_Brakhage_Werner.ipynb
@@ -30,10 +30,11 @@
     "\n",
     "We consider a Helmholtz problem with a plane wave as initial condition\n",
     "\n",
-    "\\begin{align}\n",
-    " \\left\\{ \\begin{array}{rcl l} \\Delta u + \\kappa^2 u &= 0, \\quad &\\Omega \\subset \\mathbb R^3\\,,\\\\\n",
-    " u_{in} &= e^{i\\kappa x}.\\end{array} \\right.\n",
-    "\\end{align}\n",
+    "$$\n",
+    "\\left\\{\n",
+    "\\begin{array}{rcl l} \\Delta u + \\kappa^2 u &= 0, \\quad &\\Omega \\subset \\mathbb R^3\\,,\\\\\n",
+    " u_{in} &= e^{i\\kappa x}\\,, \\quad & \\Gamma = \\partial \\Omega\\,. \\end{array} \\right.\n",
+    "$$\n",
     "\n",
     "\n",
     "Combined field integral equations combine single and double layer integral operators, one simple option is the Brakhage-Werner formulation.\n",
@@ -42,12 +43,12 @@
     "The solution is represented as\n",
     "\n",
     "$$\n",
-    "u = (i \\kappa S - D) \\phi,\n",
+    "u = (i \\kappa \\,S - D) \\phi,\n",
     "$$\n",
     "\n",
     "where $\\phi$ solve the boundary integral equation\n",
     "$$\n",
-    "    \\big( \\tfrac{1}{2} + K + i \\kappa V \\big) \\phi = u_{in} \\qquad \\text{on} \\, \\Gamma = \\partial \\Omega\n",
+    "    \\left( \\tfrac{1}{2} + K + i \\kappa \\, V \\right) \\phi = u_{in} \\qquad \\text{on} \\, \\Gamma \\,.\n",
     "$$\n",
     "\n",
     "The single layer and double layer operator are defined using the fundamental solution of the Helmholtz operator,\n",
